0.1.69: - modify documentation slightly
        - fix SF bug 1833719: warnings from read.ctd()
        - add connect.points option to plot.TS()
0.1.68: - add coastline.world dataset, and increase resolution of coastline.maritimes
        - plot.TS() no longer rotates the RH margin isopycnal labels (unless told to)
0.1.67: - allow sw.rho() and similar routines take matrices as arguments for S, t, etc
0.1.66: - fix bug in plot.TS() that prevented it from showing some isopycnals if min(S)=0
0.1.65: - switch to using UNESCO formulation for sw potential temperature by default
        - prevent warnings with C90 compiler on some machines
0.1.64: - add read.oce(), a generic function for reading several oceanographic files
        - make read.ctd() understand WOCE-exchange files
        - make read.sealevel() understand comma-separated data from MEDS
        - make plot.sealevel() skip the spectral graphs, if the timeseries has NA values
        - improve aesthetics of plot.ctd()
        - extend plot.sealevel() by adding focus.time argument
        - add ctd.decimate()
        - add oce.as.POSIXlt()
        - add latlon.format(), lat.format(), and lon.format()
        - add as.coastline()
        - add make.section()
        - add summary.section()
        - add plot.section()
        - add data(section)
0.1.63: - add sw.sound.speed()
0.1.62: - add processing.log.append() and related code
        - improve ctd.trim()
0.1.61: - add rudimentary read/summary/plot functions for lobo datasets
0.1.60: - add vignette; address some build-stage warning messages
0.1.59: - set up data files to permit latin1 encoding of some content
0.1.58: - rename all seawater-related functions, e.g. theta() as sw.theta(), to allow for atmospheric analogs
0.1.57: - make as.CTD() accept length(p)=1, e.g. for surface plots
0.1.56: - make read.coastline() handle S files
0.1.55: - keep theta() from complaining if length(p) = 1
0.1.54: - add alpha() and beta()
0.1.53: - add alpha.over.beta()